// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BeelineColor hsl 1`] = `
<DocumentFragment>
  <div
    class="css-8jebb7-BeelineColor"
  >
    <div
      class="css-15abo7m-BeelineColor"
      style="display: inline-block;"
    >
      <div
        class="css-drvamt-BeelineColor"
      />
    </div>
    <div
      class="css-k62jdo-BeelineColor"
    >
      <div
        class="css-1vtein-BeelineColor"
      >
        <div
          class="css-80ov4b-BeelineColor"
        >
          accent
        </div>
      </div>
      <div
        class="css-xv2dtc-BeelineColor"
      >
        <div
          class="css-nkm1bx-BeelineColor"
        >
          <div
            class="css-1u1nq5w-BeelineColor"
          >
            HEX:
          </div>
          <div>
            #8c7873
          </div>
        </div>
        <div
          class="css-nkm1bx-BeelineColor"
        >
          <div
            class="css-1u1nq5w-BeelineColor"
          >
            RGB:
          </div>
          <div>
            rgb(140,120,115)
          </div>
        </div>
        <div
          class="css-nkm1bx-BeelineColor"
        >
          <div
            class="css-1u1nq5w-BeelineColor"
          >
            Pantone:
          </div>
          <div>
            409C:
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BeelineColor hsla 1`] = `
<DocumentFragment>
  <div
    class="css-8jebb7-BeelineColor"
  >
    <div
      class="css-15abo7m-BeelineColor"
      style="display: inline-block;"
    >
      <div
        class="css-10p0v0i-BeelineColor"
      />
    </div>
    <div
      class="css-k62jdo-BeelineColor"
    >
      <div
        class="css-1vtein-BeelineColor"
      >
        <div
          class="css-80ov4b-BeelineColor"
        >
          accent
        </div>
      </div>
      <div
        class="css-xv2dtc-BeelineColor"
      >
        <div
          class="css-nkm1bx-BeelineColor"
        >
          <div
            class="css-1u1nq5w-BeelineColor"
          >
            HEX:
          </div>
          <div>
            #8c7873
          </div>
        </div>
        <div
          class="css-nkm1bx-BeelineColor"
        >
          <div
            class="css-1u1nq5w-BeelineColor"
          >
            RGB:
          </div>
          <div>
            rgb(140,120,115)
          </div>
        </div>
        <div
          class="css-nkm1bx-BeelineColor"
        >
          <div
            class="css-1u1nq5w-BeelineColor"
          >
            Pantone:
          </div>
          <div>
            409C:
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BeelineColor name 1`] = `
<DocumentFragment>
  <div
    class="css-8jebb7-BeelineColor"
  >
    <div
      class="css-15abo7m-BeelineColor"
      style="display: inline-block;"
    >
      <div
        class="css-ns511m-BeelineColor"
      />
    </div>
    <div
      class="css-k62jdo-BeelineColor"
    >
      <div
        class="css-1vtein-BeelineColor"
      >
        <div
          class="css-80ov4b-BeelineColor"
        >
          Critical
        </div>
      </div>
      <div
        class="css-xv2dtc-BeelineColor"
      >
        <div
          class="css-nkm1bx-BeelineColor"
        >
          <div
            class="css-1u1nq5w-BeelineColor"
          >
            HEX:
          </div>
          <div>
            #f94d32
          </div>
        </div>
        <div
          class="css-nkm1bx-BeelineColor"
        >
          <div
            class="css-1u1nq5w-BeelineColor"
          >
            RGB:
          </div>
          <div>
            rgb(249,77,50)
          </div>
        </div>
        <div
          class="css-nkm1bx-BeelineColor"
        >
          <div
            class="css-1u1nq5w-BeelineColor"
          >
            Pantone:
          </div>
          <div>
            171C:
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BeelineColor overview 1`] = `
<DocumentFragment>
  <div
    class="css-8jebb7-BeelineColor"
  >
    <div
      class="css-15abo7m-BeelineColor"
      style="display: inline-block;"
    >
      <div
        class="css-1uvaddk-BeelineColor"
      />
    </div>
    <div
      class="css-k62jdo-BeelineColor"
    >
      <div
        class="css-1vtein-BeelineColor"
      >
        <div
          class="css-80ov4b-BeelineColor"
        >
          Brand
        </div>
      </div>
      <div
        class="css-xv2dtc-BeelineColor"
      >
        <div
          class="css-nkm1bx-BeelineColor"
        >
          <div
            class="css-1u1nq5w-BeelineColor"
          >
            HEX:
          </div>
          <div>
            #2270ee
          </div>
        </div>
        <div
          class="css-nkm1bx-BeelineColor"
        >
          <div
            class="css-1u1nq5w-BeelineColor"
          >
            RGB:
          </div>
          <div>
            rgb(34,112,238)
          </div>
        </div>
        <div
          class="css-nkm1bx-BeelineColor"
        >
          <div
            class="css-1u1nq5w-BeelineColor"
          >
            Pantone:
          </div>
          <div>
            2726C:
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BeelineColor palette 1`] = `
<DocumentFragment>
  <div
    class="css-114r159"
  >
    <div
      class="css-8jebb7-BeelineColor"
    >
      <div
        class="css-15abo7m-BeelineColor"
        style="display: inline-block;"
      >
        <div
          class="css-1nsi3y5-BeelineColor"
        />
      </div>
      <div
        class="css-k62jdo-BeelineColor"
      >
        <div
          class="css-1vtein-BeelineColor"
        >
          <div
            class="css-80ov4b-BeelineColor"
          >
            Blue 5
          </div>
        </div>
        <div
          class="css-xv2dtc-BeelineColor"
        >
          <div
            class="css-nkm1bx-BeelineColor"
          >
            <div
              class="css-1u1nq5w-BeelineColor"
            >
              HEX:
            </div>
            <div>
              #001b38
            </div>
          </div>
          <div
            class="css-nkm1bx-BeelineColor"
          >
            <div
              class="css-1u1nq5w-BeelineColor"
            >
              RGB:
            </div>
            <div>
              rgb(0,27,56)
            </div>
          </div>
          <div
            class="css-nkm1bx-BeelineColor"
          >
            <div
              class="css-1u1nq5w-BeelineColor"
            >
              Pantone:
            </div>
            <div>
              289C:
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-8jebb7-BeelineColor"
    >
      <div
        class="css-15abo7m-BeelineColor"
        style="display: inline-block;"
      >
        <div
          class="css-1c7zi3o-BeelineColor"
        />
      </div>
      <div
        class="css-k62jdo-BeelineColor"
      >
        <div
          class="css-1vtein-BeelineColor"
        >
          <div
            class="css-80ov4b-BeelineColor"
          >
            Blue Accessibility
          </div>
        </div>
        <div
          class="css-xv2dtc-BeelineColor"
        >
          <div
            class="css-nkm1bx-BeelineColor"
          >
            <div
              class="css-1u1nq5w-BeelineColor"
            >
              HEX:
            </div>
            <div>
              #0352a0
            </div>
          </div>
          <div
            class="css-nkm1bx-BeelineColor"
          >
            <div
              class="css-1u1nq5w-BeelineColor"
            >
              RGB:
            </div>
            <div>
              rgb(3,82,160)
            </div>
          </div>
          <div
            class="css-nkm1bx-BeelineColor"
          >
            <div
              class="css-1u1nq5w-BeelineColor"
            >
              Pantone:
            </div>
            <div>
              2945C:
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-8jebb7-BeelineColor"
    >
      <div
        class="css-15abo7m-BeelineColor"
        style="display: inline-block;"
      >
        <div
          class="css-mrw9rk-BeelineColor"
        />
      </div>
      <div
        class="css-k62jdo-BeelineColor"
      >
        <div
          class="css-1vtein-BeelineColor"
        >
          <div
            class="css-80ov4b-BeelineColor"
          >
            Blue Primary
          </div>
        </div>
        <div
          class="css-xv2dtc-BeelineColor"
        >
          <div
            class="css-nkm1bx-BeelineColor"
          >
            <div
              class="css-1u1nq5w-BeelineColor"
            >
              HEX:
            </div>
            <div>
              #0575e6
            </div>
          </div>
          <div
            class="css-nkm1bx-BeelineColor"
          >
            <div
              class="css-1u1nq5w-BeelineColor"
            >
              RGB:
            </div>
            <div>
              rgb(5,117,230)
            </div>
          </div>
          <div
            class="css-nkm1bx-BeelineColor"
          >
            <div
              class="css-1u1nq5w-BeelineColor"
            >
              Pantone:
            </div>
            <div>
              2727C:
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-8jebb7-BeelineColor"
    >
      <div
        class="css-15abo7m-BeelineColor"
        style="display: inline-block;"
      >
        <div
          class="css-phkizb-BeelineColor"
        />
      </div>
      <div
        class="css-k62jdo-BeelineColor"
      >
        <div
          class="css-1vtein-BeelineColor"
        >
          <div
            class="css-80ov4b-BeelineColor"
          >
            Blue 1
          </div>
        </div>
        <div
          class="css-xv2dtc-BeelineColor"
        >
          <div
            class="css-nkm1bx-BeelineColor"
          >
            <div
              class="css-1u1nq5w-BeelineColor"
            >
              HEX:
            </div>
            <div>
              #4fa7ff
            </div>
          </div>
          <div
            class="css-nkm1bx-BeelineColor"
          >
            <div
              class="css-1u1nq5w-BeelineColor"
            >
              RGB:
            </div>
            <div>
              rgb(79,167,255)
            </div>
          </div>
          <div
            class="css-nkm1bx-BeelineColor"
          >
            <div
              class="css-1u1nq5w-BeelineColor"
            >
              Pantone:
            </div>
            <div>
              279C:
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-8jebb7-BeelineColor"
    >
      <div
        class="css-15abo7m-BeelineColor"
        style="display: inline-block;"
      >
        <div
          class="css-11th0go-BeelineColor"
        />
      </div>
      <div
        class="css-k62jdo-BeelineColor"
      >
        <div
          class="css-1vtein-BeelineColor"
        >
          <div
            class="css-80ov4b-BeelineColor"
          >
            Blue 2
          </div>
        </div>
        <div
          class="css-xv2dtc-BeelineColor"
        >
          <div
            class="css-nkm1bx-BeelineColor"
          >
            <div
              class="css-1u1nq5w-BeelineColor"
            >
              HEX:
            </div>
            <div>
              #85dfff
            </div>
          </div>
          <div
            class="css-nkm1bx-BeelineColor"
          >
            <div
              class="css-1u1nq5w-BeelineColor"
            >
              RGB:
            </div>
            <div>
              rgb(133,223,255)
            </div>
          </div>
          <div
            class="css-nkm1bx-BeelineColor"
          >
            <div
              class="css-1u1nq5w-BeelineColor"
            >
              Pantone:
            </div>
            <div>
              636C:
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-8jebb7-BeelineColor"
    >
      <div
        class="css-15abo7m-BeelineColor"
        style="display: inline-block;"
      >
        <div
          class="css-1dqoq8e-BeelineColor"
        />
      </div>
      <div
        class="css-k62jdo-BeelineColor"
      >
        <div
          class="css-1vtein-BeelineColor"
        >
          <div
            class="css-80ov4b-BeelineColor"
          >
            Blue 3
          </div>
        </div>
        <div
          class="css-xv2dtc-BeelineColor"
        >
          <div
            class="css-nkm1bx-BeelineColor"
          >
            <div
              class="css-1u1nq5w-BeelineColor"
            >
              HEX:
            </div>
            <div>
              #ecf5ff
            </div>
          </div>
          <div
            class="css-nkm1bx-BeelineColor"
          >
            <div
              class="css-1u1nq5w-BeelineColor"
            >
              RGB:
            </div>
            <div>
              rgb(236,245,255)
            </div>
          </div>
          <div
            class="css-nkm1bx-BeelineColor"
          >
            <div
              class="css-1u1nq5w-BeelineColor"
            >
              Pantone:
            </div>
            <div>
              656C:
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-8jebb7-BeelineColor"
    >
      <div
        class="css-15abo7m-BeelineColor"
        style="display: inline-block;"
      >
        <div
          class="css-1wqo7q2-BeelineColor"
        />
      </div>
      <div
        class="css-k62jdo-BeelineColor"
      >
        <div
          class="css-1vtein-BeelineColor"
        >
          <div
            class="css-80ov4b-BeelineColor"
          >
            Blue 4
          </div>
        </div>
        <div
          class="css-xv2dtc-BeelineColor"
        >
          <div
            class="css-nkm1bx-BeelineColor"
          >
            <div
              class="css-1u1nq5w-BeelineColor"
            >
              HEX:
            </div>
            <div>
              #fbfdff
            </div>
          </div>
          <div
            class="css-nkm1bx-BeelineColor"
          >
            <div
              class="css-1u1nq5w-BeelineColor"
            >
              RGB:
            </div>
            <div>
              rgb(251,253,255)
            </div>
          </div>
          <div
            class="css-nkm1bx-BeelineColor"
          >
            <div
              class="css-1u1nq5w-BeelineColor"
            >
              Pantone:
            </div>
            <div>
              656C:
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BeelineColor rgb 1`] = `
<DocumentFragment>
  <div
    class="css-8jebb7-BeelineColor"
  >
    <div
      class="css-15abo7m-BeelineColor"
      style="display: inline-block;"
    >
      <div
        class="css-14158i4-BeelineColor"
      />
    </div>
    <div
      class="css-k62jdo-BeelineColor"
    >
      <div
        class="css-1vtein-BeelineColor"
      >
        <div
          class="css-80ov4b-BeelineColor"
        >
          text
        </div>
      </div>
      <div
        class="css-xv2dtc-BeelineColor"
      >
        <div
          class="css-nkm1bx-BeelineColor"
        >
          <div
            class="css-1u1nq5w-BeelineColor"
          >
            HEX:
          </div>
          <div>
            #000000
          </div>
        </div>
        <div
          class="css-nkm1bx-BeelineColor"
        >
          <div
            class="css-1u1nq5w-BeelineColor"
          >
            RGB:
          </div>
          <div>
            rgb(0,0,0)
          </div>
        </div>
        <div
          class="css-nkm1bx-BeelineColor"
        >
          <div
            class="css-1u1nq5w-BeelineColor"
          >
            Pantone:
          </div>
          <div>
            419C:
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BeelineColor rgba 1`] = `
<DocumentFragment>
  <div
    class="css-8jebb7-BeelineColor"
  >
    <div
      class="css-15abo7m-BeelineColor"
      style="display: inline-block;"
    >
      <div
        class="css-eu60px-BeelineColor"
      />
    </div>
    <div
      class="css-k62jdo-BeelineColor"
    >
      <div
        class="css-1vtein-BeelineColor"
      >
        <div
          class="css-80ov4b-BeelineColor"
        >
          shadow
        </div>
      </div>
      <div
        class="css-xv2dtc-BeelineColor"
      >
        <div
          class="css-nkm1bx-BeelineColor"
        >
          <div
            class="css-1u1nq5w-BeelineColor"
          >
            HEX:
          </div>
          <div>
            #000000
          </div>
        </div>
        <div
          class="css-nkm1bx-BeelineColor"
        >
          <div
            class="css-1u1nq5w-BeelineColor"
          >
            RGB:
          </div>
          <div>
            rgb(0,0,0,0.1)
          </div>
        </div>
        <div
          class="css-nkm1bx-BeelineColor"
        >
          <div
            class="css-1u1nq5w-BeelineColor"
          >
            Pantone:
          </div>
          <div>
            419C:
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
